--- a/readme
+++ b/readme
@@ -1,4 +1,4 @@
 Material for different classes:
 
--Operating System Linux
+-Operating System Linux (Lectures, labs, exams)
 -IA: Images and Videos processing
